User can now select a device and get its data
+ Reorganized code structure
+ Added new atom for WebSocket topic management
+ Added centralized import file for hooks
+ Implemented backend endpoint to list user devices
+ Updated backend to send updates to per-device topics
+ Removed legacy auto-subscribe and data-fetch system
+ Added hook to handle topic subscription and unsubscription
+ Added hook to handle onmessage from certain evenType
+ Logout now clear all atoms
+ Now save clientId so websocket can reuse
+ History more mobile friendly
+ Now page have access to jwt without need refresh
