# server/Application/Models/StringConstants.cs
@@ -3,6 +3,8 @@ namespace Application.Models;
 public static class StringConstants
 {
     public const string Dashboard = nameof(Dashboard);
+    public const string GreenhouseSensorData = nameof(GreenhouseSensorData);
+    
     public const string Device = nameof(Device);
     
     public const string SensorData = nameof(SensorData);
